# IntergalacticCargoPortal---Bhat

./: README.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/core/: dependencies.py  exceptions.py  security.py
backend/app/models/: schema.sql
backend/app/routers/: auth.py  cargo.py
backend/app/schemas/: cargo.py  user.py
backend/app/services/: auth_service.py  manifest_service.py
backend/app/utils/: prime.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: CargoTable.jsx  FileUpload.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  SignupPage.jsx
frontend/src/utils/: cargoUtils.js
